recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:18: error: ')' expected but ';' found.
  allerVers(0, 0;
                ^